# student_attendance_reader

./: .gitignore  LICENSE  README.md  app.js  backend.py  index.html  pyproject.toml
styles/: style.css
